# slog_vs_fast_log

./: Cargo.toml  README.md
benches/: common.rs  fast_log.rs  logs.rs  slog.rs
