[package]
name = "slog_vs_fast_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fast_log = "1.3"
slog = "2.7"
slog-term = "2.8"
slog-async = "2.7"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "logs"
harness = false
